k8s/apps/immich_server/immich-machine-learning-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-machine-learning
  name: immich-machine-learning
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
      - env:
        - name: DB_URL
          value: postgresql://sweeny:REDACTED@database:5432/immich
        - name: REDIS_HOSTNAME
          value: redis
        - name: REDIS_PORT
          value: "6379"
        image: ghcr.io/immich-app/immich-machine-learning:v1.106.4
        name: immich-machine-learning
        ports:
        - containerPort: 3003
        volumeMounts:
        - mountPath: /cache
          name: immich-machine-learning-data-0
      volumes:
      - name: immich-machine-learning-data-0
        persistentVolumeClaim:
          claimName: immich-machine-learning-data-0
