k8s/apps/immich_server/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: default
spec:
  ports:
  - name: port-5432
    port: 5432
    targetPort: 5432
  selector:
    app: database
