k8s/apps/immich_server/immich-machine-learning-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: default
spec:
  ports:
  - name: port-3003
    port: 3003
    targetPort: 3003
  selector:
    app: immich-machine-learning
