k8s/apps/immich_server/immich-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: default
spec:
  ports:
  - name: port-2283
    port: 2283
    targetPort: 2283
  selector:
    app: immich-server
