k8s/apps/immich_server/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  ports:
  - name: port-6379
    port: 6379
    targetPort: 6379
  selector:
    app: redis
