k8s/apps/immich_server/immich-server-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-server-ingress
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`immich.example.com`)
    services:
    - name: immich-server
      port: 2283
  tls:
    certResolver: cloudflare
